# etf_quant

./: .gitignore  Makefile  README.md  batch_test.py  config.yaml  main.py  pyproject.toml
app/: run_dashboard.py
app/components/: data_loader.py
app/pages/: 1_Market_Monitor.py  2_Pool_Manager.py  3_Backtest_Panel.py  4_History_Viewer.py
data/: market.db
data/parquet/: 000688.parquet  510300.parquet  510500.parquet  512800.parquet
doc/: backtest.md
openspec/: config.yaml
openspec/changes/add-ema20-strategy/: design.md  tasks.md
openspec/changes/add-strategy-factor-research/: design.md  tasks.md
openspec/changes/improve-etf-pool/: proposal.md
openspec/changes/modular-architecture-refactor/: tasks.md
openspec/changes/optimize-etf-momentum-ranking/: design.md
openspec/changes/optimize-result-processing/: design.md  proposal.md  tasks.md
openspec/specs/dashboard-ui/: spec.md
openspec/specs/data-cleaner/: spec.md
results/000688/: report.md
results/512800/: report.md
results/513520/: report.md
results/600111/: report.md
results/600938/: report.md
results/601318/: report.md
src/: config.py  main.py  simple_backtest.py.bak
src/backtest/: engine.py  metrics.py
src/data/: __init__.py  cleaner.py  etf_catalog.py  fetcher.py  loader.py  storage.py
src/research/: __init__.py  batch_runner.py  optimizer.py
src/risk/: position_sizer.py  risk_manager.py
src/strategy/: __init__.py  base.py  ema20_pullback.py  grid.py  ma_cross.py  mean_reversion.py  momentum.py  turtle.py
src/utils/: plotting.py  reporter.py
(+52 files in other folders)
