[project]
name = "etf-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.25",
    "altair>=5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.2,<3",
    "plotly>=6.5.2",
    "pyarrow>=19.0.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.40",
    "tqdm>=4.67.1",
]
